Fixing new post buttons and containers on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 /*footer*/
 .footer-container {
     width: 100%;
-    max-width: 100%;
+    min-width: 100%;
     height: 200px;
     background-color: var(--secondary);
     border-top: 1px solid;
